# duckdb

./: .env_exemplo  .gitignore  README.md  app.py  duckdb.db  instruções.md  pipeline_.py  pipeline_etl.py  pyproject.toml  teste.py
outros/: .gitignore
painel_viagens/: Análise de Desempenho de Vendas de Passagens.pbix  README.md
pipeline_etl/: .env  Dockerfile  README.md  app.py  duckdb.db  instruções.md  pipeline_etl.py
pipeline_etl/arquivos_salvos/: venda_passagem_01_2020.csv  venda_passagem_03_2019.csv  venda_passagem_11_2019.csv  venda_passagem_12_2019.csv
