[tool.poetry]
name = "base"
version = "0.1.0"
description = ""
authors = ["Sissaz <siciiliagiacomazza@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
streamlit = "^1.32.2"
gdown = "^5.1.0"
duckdb = "^0.10.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
